--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,14 @@
 <!-- templates/base.html -->
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>{% block title %}Default Title{% endblock %}</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <h1 class="h-10 text-3xl font-bold">
+    Task Manager
+  </h1>
   </head>
-  <body>
-    <div>
-      <ul>
-        <li><a href="/">Home</a></li>
-      </ul>
-    </div>
-    <div>{% block content %}{% endblock %}</div>
+<body class="flex grid justify-center">
+  <div>{% block content %}{% endblock %}</div>
   </body>
+
 </html>
