--- a/templates/task_delete.html
+++ b/templates/task_delete.html
@@ -1,5 +1,8 @@
+{% extends 'base.html' %}
+{% block content %}
 <form method="post">
     {%csrf_token%}
     <p>Are you sure want to delete the task "{{object}}"?</p>
     <input type="submit" value="Confirm"/>
 </form>
+{% endblock %}
