--- a/templates/task_detail.html
+++ b/templates/task_detail.html
@@ -1,4 +1,7 @@
+{% extends 'base.html' %}
+{% block content %}
 <h1>Title</h1>
 {{object.title}}
 <h2>Description</h2>
 {{object.description}}
+{% endblock %}
