base html template added to all html

--- a/templates/task_create.html
+++ b/templates/task_create.html
@@ -1,5 +1,6 @@
+{% extends "base.html" %} {% block content %}
 <form action="/create-task/" method="post">
-    {{form.as_p}}
-    {% csrf_token %}
-    <button type="submit">Add Task</button>
+  {{form.as_p}} {% csrf_token %}
+  <button type="submit">Add Task</button>
 </form>
+{% endblock content %}
