--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,8 @@
   <body>
     <div>
       <ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="/tasks">Home</a></li>
+        <li><a href="/report/{{request.user.id}}">Report</a></li>
       </ul>
     </div>
     <div>{% block content %}{% endblock %}</div>
