--- a/templates/user_create.html
+++ b/templates/user_create.html
@@ -1,4 +1,6 @@
+{% extends "base.html" %} {% block content %}
 <form action="" method="post">
   {{form.as_p}} {% csrf_token %}
   <button type="submit">Signup</button>
 </form>
+{% endblock content %}
