--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <div>
       <ul>
         <li><a href="/tasks">Home</a></li>
-        <li><a href="/report/{{request.user.id}}">Report</a></li>
+        <li><a href="/report/{{report_id}}">Report</a></li>
       </ul>
     </div>
     <div>{% block content %}{% endblock %}</div>
